--- a/src/components/authentication/password-recovery/ForgotPassword.css
+++ b/src/components/authentication/password-recovery/ForgotPassword.css
@@ -1,11 +1,17 @@
+.boxForm {
+  box-shadow: 1em 0.5em;
+  border-radius: 0
+}
+
 .ForgotPasswordForm {
   position: relative;
   top: 80px;
   min-height: 40vh;
   width: 450px;
   padding-right: 80px;
-  right: 32px;
   float: right;
+  border-radius: 0;
+  ;
 }
 
 .RegisterButton {
